--- a/themes/bene_base/sass/components/_paragraphs.scss
+++ b/themes/bene_base/sass/components/_paragraphs.scss
@@ -82,6 +82,7 @@
   position: relative;
   text-align: center;
   width: 100vw;
+  max-width: 100%;
   &:before {
     background-color: rgba(0,0,0,0.4);
     bottom: 0;
